--- a/introductory-presentation.rmd
+++ b/introductory-presentation.rmd
@@ -93,7 +93,7 @@ background-size: contain
 # One example of ML . . .
 
 ```{r, echo = FALSE, out.width="62%", fig.align='center'}
-knitr::include_graphics("img/gpt-3.png")
+knitr::include_graphics("lab-1/img/gpt-3.png")
 ```
 
 https://beta.openai.com/playground
@@ -108,6 +108,8 @@ https://beta.openai.com/playground
 
 **Using Twitter users profile descriptions to predict whether or not they were teachers**
 - Manually coded > 500 profiles for whether they were teachers or non-teachers and then trained a ML model to predict 1000s of teachers' roles as teachers or non-teachers (with an accuracy of 85%), [Rosenberg et al., *AERA Open* (2021)](https://journals.sagepub.com/doi/full/10.1177/23328584211024261)
+
+**Using audio data, prosodic features, automatic speech recognition, and send related methods** (in progress!)
 
 ---
 
@@ -282,42 +284,42 @@ class: clear, inverse, center, middle
 
 We'll work to answer these four questions:
 
-- LL 1: Can we predict something we would have coded by hand?
-- LL 2: How much do new predictors improve the prediction quality?
-- LL 3: How much of a difference does a more complex model make?
-- LL 4: What if we do not have training data?
+- LL 1: Prediction: How is prediction different from explanation?
+- LL 2: Interpretation: How do we interpret the accuracy of a machine learning model?
+- LL 3: Improvement: How can we make a better model?
+- LL 4: Discovery: What if we do not have training data?
 
 ]
 
 .panel[.panel-name[LL 1]
 
-**Machine Learning Learning Lab 1: Focusing on prediction**
+**Machine Learning Learning Lab 1: Prediction**
 
-We have some data, but we want to use a computer to **automate** or scale up the relationships between predictor (independent) and outcome (dependent) variables. Supervised machine learning is suited to this aim. In particular, in this learning lab, we explore how we can train a computer to learn and reproduce qualitative coding we carried out---though the principles extend to other types of variables.
+We have some data and want to develop a preidction model. Supervised machine learning is suited to this aim. In particular, in this learning lab, we explore how we can train a computer to predict students' withdrawal from a course. We use a large data set, the Open University Learning Analytics Dataset (OULAD), focusing on student data at this point.
 
 ]
 
 .panel[.panel-name[LL 2]
 
-**Machine Learning Learning Lab 2: Feature engineering**
+**Machine Learning Learning Lab 2: Interpretation**
 
-Once we have trained a computer in the context of using supervised machine learning methods, we may realize we can improve it by adding new variables or changing how the variables we are using were prepared. In this learning lab, we consider **feature engineering** with a variety of types of data from many online science courses to predict students' success after only a few weeks of the course
+How do we interpret a machine learning model? What else can we say, besides how accurate a model this? This learning lab is intended to help you to answer these questions by examining output from a classification and a regression model. We again use the OULAD, but add an assessment file.
 
 ]
 
 .panel[.panel-name[LL 3]
 
-**Machine Learning Learning Lab 3: Fine-tuning the model**
+**Machine Learning Learning Lab 3: Improvement**
 
-Even with optimal feature engineering, we may be able to specify an even more predictive model by selecting and *tuning* a more sophisticated algorithm. While in the first two learning labs we used logistic regression as the "engine" (or algorithm), in this learning lab, we use a random forest as the engine for our model. This more sophisticated type of model requires us to specify **tuning parameters**, specifications that determine how the model works.
+Once we have trained a computer in the context of using supervised machine learning methods, we may realize we can improve it by adding new variables or changing how the variables we are using were prepared. In this learning lab, we consider **feature engineering** with interaction data from the OULAD data set.
 
 ]
 
 .panel[.panel-name[LL 4]
 
-**Machine Learning Learning Lab 4: Finding groups (or codes) in data**
+**Machine Learning Learning Lab 4: Disovery*
 
-The previous three learning labs involved the use of data with known outcome variables (coded for the substantive or transactional nature of the conversations taking place through #NGSSchat in learning labs 1 and 3 and students' grades in learning lab 2). Accordingly, we explored different aspects of supervised machine learning. What if we have data without something that we can consider to be a dependent variable? **Unsupervised machine learning methods** can be used in such cases.
+The previous three learning labs involved the use of data with known outcome variables in the first three learning labs. Accordingly, we explored different aspects of supervised machine learning. What if we have data without something that we can consider to be a dependent variable? **Unsupervised machine learning methods** can be used in such cases. 
 ]
 ]
 
@@ -338,5 +340,3 @@ jmrosenberg@utk.edu
 @jrosenberg6432    
 
 Slides created via the R package [xaringan](https://github.com/yihui/xaringan)
-
-Available: 
