--- a/lab-1/ll-1-overview-presentation.Rmd
+++ b/lab-1/ll-1-overview-presentation.Rmd
@@ -64,9 +64,16 @@ xaringanExtra::use_tile_view()
 
 # Background
 
-- We have some data, but we want to use a computer to **automate** or scale up the relationships between predictor (independent) and outcome (dependent) variables. Supervised machine learning is suited to this aim. 
-- We use *data from a large, social media-based community focused on supporting the implementation of the Next Generation Science Standards, #NGSSchat on Twitter*.   
-- Using 1000s of qualitative codes from two years of the chat, we explore how well a computer can scale up this coding **to code others years data**
+- We want to make predictions about an outcome of interest based on predictor variables that we think are related to the outcome. 
+- We'll be using a widely-used data set in the learning analytics field:
+the [Open University Learning Analytics Dataset
+(OULAD)](https://analyse.kmi.open.ac.uk/open_dataset). 
+- The OULAD was
+created by learning analytics researchers at the United Kingdom-based
+Open University. 
+- It includes data from post-secondary learners
+participation in one of several Massive Open Online Courses (called
+*modules* in the OULAD).
 
 ---
 
@@ -82,7 +89,7 @@ xaringanExtra::use_tile_view()
 .pull-right[
 
 ## Part 2: R Code Examples
-### #NGSSchat data
+### OULAD data
 - Estimating a logistic regression model
 - Interpreting the model in terms of its predictive accuracy
 ]
@@ -137,177 +144,34 @@ knitr::include_graphics("img/joro-pointing.jpeg")
 
 ---
 
-# What if we want to *scale* a coding frame?
+# Can we predict students' withdrawal from OULAD courses?
 
-```{r, out.width = "50%", fig.align='center'}
-knitr::include_graphics("img/ngsschat-article.png")
+- Many students withdraw from these courses
+- We have data on students' initial characteristics and their interactions in the course
+- If we could develop a good prediction model, we could provide additional supports to students--and maybe move the needle on some students succeeding who might not otherwise
+
+---
+
+# OULAD
+
+```{r, echo = FALSE}
+knitr::include_graphics("img/oulad-data.png")
 ```
 
 ---
 
-# Let's look at a few examples
+# OULAD
 
-.pull-left[
+We'll be focusing on three files:
 
-`id_string`: 46
+- studentInfo, courses, and studentRegistration
 
-```{r, out.width="70%"}
-knitr::include_graphics("img/ngsschat-example-tweets_1.png")
+These are joined together (see `oulad.R`) for this learning lab. You'll be doing more joining later!
+
+```{r}
+students <- read_csv("data/oulad-students.csv")
+students %>% head(3)
 ```
-
-]
-
-.pull-right[
-
-**How would you code this?**
-
-We used a coding frame from [van Bommel et al. (2020)](https://www.sciencedirect.com/science/article/pii/S0742051X19300629):
-
-- *Transactional*: A transactional interaction refers to those in which participation or learning is acknowledged.
-- *Substantive*: Discussions of NGSS- and science education-related content.
-
-]
-
----
-
-# Let's look at a few examples
-
-.pull-left[
-
-`id_string`: 46
-
-```{r, out.width="70%"}
-knitr::include_graphics("img/ngsschat-example-tweets_1.png")
-```
-
-]
-
-.pull-right[
-
-**We coded this as *substantive***
-
-We used a coding frame from [van Bommel et al. (2020)](https://www.sciencedirect.com/science/article/pii/S0742051X19300629):
-
-- *Transactional*: A transactional interaction refers to those in which participation or learning is acknowledged.
-- *Substantive*: Discussions of NGSS- and science education-related content.
-
-]
-
----
-
-
-# Let's look at a few examples
-
-.pull-left[
-
-`id_string`: 30
-
-```{r, out.width="70%"}
-knitr::include_graphics("img/ngsschat-example-tweets_2.png")
-```
-
-]
-
-.pull-right[
-
-**How would you code this?**
-
-We used a coding frame from [van Bommel et al. (2020)](https://www.sciencedirect.com/science/article/pii/S0742051X19300629):
-
-- *Transactional*: A transactional interaction refers to those in which participation or learning is acknowledged.
-- *Substantive*: Discussions of NGSS- and science education-related content.
-
-]
-
----
-
-# Let's look at a few examples
-
-.pull-left[
-`id_string`: 30
-
-```{r, out.width="70%"}
-knitr::include_graphics("img/ngsschat-example-tweets_2.png")
-```
-
-]
-
-.pull-right[
-
-**We coded this as *transactional***
-
-We used a coding frame from [van Bommel et al. (2020)](https://www.sciencedirect.com/science/article/pii/S0742051X19300629):
-
-- *Transactional*: A transactional interaction refers to those in which participation or learning is acknowledged.
-- *Substantive*: Discussions of NGSS- and science education-related content.
-
-]
-
----
-
-# Let's look at a few examples
-
-.pull-left[
-`id_string`: 45
-
-```{r, out.width="70%"}
-knitr::include_graphics("img/ngsschat-example-tweets_3.png")
-```
-
-]
-
-.pull-right[
-
-**We coded this as *substantive***
-
-We used a coding frame from [van Bommel et al. (2020)](https://www.sciencedirect.com/science/article/pii/S0742051X19300629):
-
-- *Transactional*: A transactional interaction refers to those in which participation or learning is acknowledged.
-- *Substantive*: Discussions of NGSS- and science education-related content.
-
-]
-
----
-
-# Let's look at a few examples
-
-.pull-left[
-`id_string`: 2
-
-```{r, out.width="70%"}
-knitr::include_graphics("img/ngsschat-example-tweets_4.png")
-```
-
-]
-
-.pull-right[
-
-**We coded this as *transactional***
-
-We used a coding frame from [van Bommel et al. (2020)](https://www.sciencedirect.com/science/article/pii/S0742051X19300629):
-
-- *Transactional*: A transactional interaction refers to those in which participation or learning is acknowledged.
-- *Substantive*: Discussions of NGSS- and science education-related content.
-
-]
-
----
-
-# Can we scale up?
-
-There are *hundreds of thousands* of tweets like this in threads; practically, there's no way we could code all of them.
-
---
-
-But, we did code several thousand threads
-
---
-
-Can we use these to scale up our coding?
-
---
-
-In other words, can the computer use the features of tweets in threads to assign them labels as *transactional* or *substantive* conversations?
 
 ---
 
@@ -373,7 +237,7 @@ We'll dive into each of these subsequently
 library(tidyverse)
 library(tidymodels)
 
-d <- read_csv("data/ngsschat-processed-data.csv")
+students <- read_csv("data/students-ss.csv")
 ```
 ]
 
@@ -382,7 +246,7 @@ d <- read_csv("data/ngsschat-processed-data.csv")
 **Split data**
 
 ```{r panel-chunk-1, echo = TRUE, eval = FALSE}
-train_test_split <- initial_split(ddd, prop = .70)
+train_test_split <- initial_split(students, prop = .80)
 
 data_train <- training(train_test_split)
 data_test <- testing(train_test_split)
@@ -394,7 +258,7 @@ data_test <- testing(train_test_split)
 **Engineer features**
 
 ```{r panel-chunk-2, echo = TRUE, eval = FALSE}
-my_rec <- recipe(code ~ ., data = data_train)
+my_rec <- recipe(withdrawn ~ disability + imd_band, data = data_train) # this is the key change and addition
 ```
 ]
 
@@ -437,103 +301,6 @@ final_fit %>%
     collect_metrics()
 ```
 ]
-]
-
----
-
-# Let's see how the model does
-
-.pull-left[
-`id_string`: 46
-
-```{r, out.width="70%"}
-knitr::include_graphics("img/ngsschat-example-tweets_1.png")
-```
-
-We coded this as *substantive*  
-The model predicted: *substantive* **correct!**
-]
-
-.pull-right[
-
-We used a coding frame from [van Bommel et al. (2020)](https://www.sciencedirect.com/science/article/pii/S0742051X19300629):
-
-- *Transactional*: A transactional interaction refers to those in which participation or learning is acknowledged.
-- *Substantive*: Discussions of NGSS- and science education-related content.
-
-]
-
----
-
-# Let's see how the model does
-
-.pull-left[
-`id_string`: 30
-
-```{r, out.width="70%"}
-knitr::include_graphics("img/ngsschat-example-tweets_2.png")
-```
-
-We coded this as *transactional*  
-The model predicted: *transactional* **correct!**
-]
-
-.pull-right[
-
-We used a coding frame from [van Bommel et al. (2020)](https://www.sciencedirect.com/science/article/pii/S0742051X19300629):
-
-- *Transactional*: A transactional interaction refers to those in which participation or learning is acknowledged.
-- *Substantive*: Discussions of NGSS- and science education-related content.
-
-]
-
----
-
-# Let's see how the model does
-
-.pull-left[
-`id_string`: 45
-
-```{r, out.width="70%"}
-knitr::include_graphics("img/ngsschat-example-tweets_3.png")
-```
-
-We coded this as *substantive*  
-The model predicted: *transactional* **incorrect; why?**
-]
-
-.pull-right[
-
-We used a coding frame from [van Bommel et al. (2020)](https://www.sciencedirect.com/science/article/pii/S0742051X19300629):
-
-- *Transactional*: A transactional interaction refers to those in which participation or learning is acknowledged.
-- *Substantive*: Discussions of NGSS- and science education-related content.
-
-]
-
----
-
-# Let's see how the model does
-
-.pull-left[
-
-`id_string`: 2
-
-```{r, out.width="70%"}
-knitr::include_graphics("img/ngsschat-example-tweets_4.png")
-```
-
-We coded this as *transactional*  
-The model predicted: *substantive* **incorrect; why?**
-]
-
-.pull-right[
-
-We used a coding frame from [van Bommel et al. (2020)](https://www.sciencedirect.com/science/article/pii/S0742051X19300629):
-
-- *Transactional*: A transactional interaction refers to those in which participation or learning is acknowledged.
-- *Substantive*: Discussions of NGSS- and science education-related content.
-
 ]
 
 ---
